Fixed alignment of two column template

--- a/slides/assets/css/my.css
+++ b/slides/assets/css/my.css
@@ -5,3 +5,6 @@ strong {
   font-weight: bold;
 }
 
+.left {
+  text-align: left;
+}
